# SAST_NEO

./: .gitignore  CONTRIBUTING.md  README.md  cve-list v2.json  promt.md  pyproject.toml  test_regex.py
ojs_sast/: __init__.py  cli.py  constants.py
ojs_sast.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ojs_sast/categories/: __init__.py
ojs_sast/categories/config/: __init__.py  scanner.py
ojs_sast/categories/config/parsers/: __init__.py  apache_parser.py  nginx_parser.py  ojs_config.py
ojs_sast/categories/source_code/: __init__.py  php_parser.py  scanner.py  smarty_parser.py
ojs_sast/categories/source_code/rules/: cve_ojs.yaml
ojs_sast/categories/uploaded_file/: __init__.py  magic_detector.py  scanner.py  validator.py
ojs_sast/config/: default_settings.yaml
ojs_sast/data/: breached_passwords.txt
ojs_sast/engine/: __init__.py  ast_matcher.py  ast_query_evaluator.py  ast_walker.py  scanner.py
ojs_sast/engine/taint/: __init__.py  analyzer.py  sanitizers.py  sinks.py  sources.py
ojs_sast/models/: __init__.py  finding.py  report.py  rule.py
ojs_sast/reporters/: __init__.py  sarif_reporter.py
ojs_sast/reporters/templates/: report.html.j2
ojs_sast/results/20260422_222225/: report.html  report.json  report.sarif
ojs_sast/results/20260422_223046/: report.html  report.json
ojs_sast/rules/: __init__.py  loader.py  validator.py
ojs_sast/utils/: __init__.py  file_utils.py  logger.py  ojs_detector.py  version_parser.py
scratch/: test_ast.php  test_path_filter.py
scripts/: ojs_source_code_groundtruth.py
(+33 files in other folders)
